--- a/ERPWeb/Views/Common/_sidebar.cshtml
+++ b/ERPWeb/Views/Common/_sidebar.cshtml
@@ -18,7 +18,7 @@
         @foreach (var mm in Model)
         {
             <li class="nav-item has-treeview">
-                <a href="#" class="nav-link">
+                <a href="#" class="nav-link" style="color: #000000;">
                     <i class="nav-icon fas fa-list"></i>
                     <p>
                         @mm.MainmenuName
@@ -31,7 +31,7 @@
                         if (!sub.IsParent)
                         {
                             <li class="nav-item">
-                                <a href="/@sub.ControllerName/@sub.ActionName" class="nav-link">
+                                <a href="/@sub.ControllerName/@sub.ActionName" class="nav-link" style="color: #000000;">
                                     <i class="fas fa-circle fa-1x nav-icon"></i>
                                     <p>@sub.SubmenuName</p>
                                 </a>
@@ -49,7 +49,7 @@
                                     @foreach (var subsub in sub.UserSubSubmenus)
                                     {
                                         <li class="nav-item">
-                                            <a href="/@subsub.ControllerName/@subsub.ActionName" class="nav-link">
+                                            <a href="/@subsub.ControllerName/@subsub.ActionName" class="nav-link" style="color: #000000;">
                                                 <i class="far fa-dot-circle nav-icon"></i>
                                                 <p>@subsub.SubsubmenuName</p>
                                             </a>
