--- a/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetMeasurementList.cshtml
@@ -199,7 +199,7 @@
                         </div>
 
                         <div class="form-group col-md-12">
-                            <label for="masterCartoonBox" class="control-label">Inner Box</label>
+                            <label for="innerBox" class="control-label">Inner Box</label>
                             <input type="number" id="innerBox" class="form-control form-control" />
                             <span class="error hide required-innerBox font-weight-bold">Input Inner Box</span>
 
@@ -511,10 +511,10 @@
             innerBox.val(td5);
             packSize.val(td6);
             ddlUnits.val(td8);
-            ddlUnits.trigger("Change");
+            ddlUnits.trigger("change");
            // unitId.val(td8);
             ddlStatus.val(td9);
-            ddlStatus.trigger("Change");
+            ddlStatus.trigger("change");
 
 
             //hiddenMeasureMentId.val(td1);
