--- a/ERPWeb/Views/AgroConfiguration/_GetProductSalesDropList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetProductSalesDropList.cshtml
@@ -36,7 +36,7 @@
                 <td class="hide">@item.ProductSalesInfoId</td>
                 @*<td class="hide">@item.StockiestId</td>*@
                 <td class="text-center">@item.InvoiceNo</td>
-                <td class="text-center">@item.InvoiceDate</td>
+                <td class="text-center">@item.InvoiceDate.Value.ToString("dd-MMM-yyyy")</td>
                 <td class="text-center">@item.StockiestName</td>
                 <td class="text-center">@item.TotalAmount</td>
                 <td class="text-center">@item.PaidAmount</td>
