--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
@@ -1,87 +1,11 @@
 ﻿@model IEnumerable<ERPBO.Agriculture.ViewModels.AgroProductSalesDetailsViewModel>
 @{
     ViewBag.Title = "_GetAgroSalesProductEdit";
-    var info = (ERPBO.Agriculture.ViewModels.AgroProductSalesInfoViewModel)ViewBag.Info;
+    //var info = (ERPBO.Agriculture.ViewModels.AgroProductSalesInfoViewModel)ViewBag.Info;
     int sl = 0;
 }
-<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm">
-    @if (info != null)
-    {
-        <tr style="width: 100%; background-color: #ede7e7 ">
-            <td style="width:10%">Date</td>
-            <td style="width:17%"><b>@info.InvoiceDate.Value.ToShortDateString()</b></td>
-
-            <td style="width:10%">Invoice No</td>
-            <td style="width:25%"><b>@info.InvoiceNo</b></td>
-
-            <td style="width:13%">ChallanNo No</td>
-            <td style="width:25%"><b>@info.ChallanNo</b></td>
-            <td class="hide"><b>@info.StockiestId</b></td>
-        </tr>
 
 
-    }
-</table>
-<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" style="margin-top:-15px;">
-    @if (info != null)
-    {
-
-        <tr style="width: 100%; background-color: #c9e1eb ">
-            <td style="width:15%">Driver Name</td>
-            <td style="width:20%">
-                <input type="text" name="DiverName" value="@info.DriverName" />
-                @*<b>@info.DriverName</b>*@
-            </td>
-
-            <td style="width:15%">Vehicle Number</td>
-            <td style="width:20%">
-                <input type="text" name="DiverName" value="@info.VehicleNumber" />
-                @*<b>@info.VehicleNumber</b>*@
-            </td>
-
-            <td style="width:15%">Delivery Place</td>
-            <td style="width:20%">
-                <input type="text" name="DiverName" value="@info.DeliveryPlace" />
-                @*<b>@info.DeliveryPlace</b>*@
-            </td>
-
-            <td class="hide"><b>@info.StockiestId</b></td>
-        </tr>
-
-    }
-</table>
-
-<table class="table table-bordered table-striped table-sm table-responsive-lg text-sm" style="margin-top:-15px;">
-    @if (info != null)
-    {
-
-        <tr style="width: 100%; background-color: #edd0f7 ">
-            <td style="width:7%">Stockiest</td>
-            <td style="width:10%">
-                
-
-                    @Html.DropDownList("ddlStockiestName", (IEnumerable<SelectListItem>)ViewBag.ddlStockiestName, "--Select Stockiest--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
-               
-            </td>
-
-            <td style="width:7%">Territory</td>
-            <td style="width:10%"><b>@info.TerritoryName</b></td>
-
-            <td style="width:6%">Area</td>
-            <td style="width:10%"><b>@info.AreaName</b></td>
-
-            <td style="width:7%">Region</td>
-            <td style="width:10%"><b>@info.RegionName</b></td>
-
-            <td style="width:7%">Division</td>
-            <td style="width:10%"><b>@info.DivisionName</b></td>
-
-            <td style="width:6%">Zone</td>
-            <td style="width:10%"><b>@info.ZoneName</b></td>
-
-        </tr>
-    }
-</table>
 <table class="table table-bordered table-striped table-sm table-responsive-lg text-sm " id="tblAgroSalesProductEdit">
     <thead class="thead-dark">
         <tr class="text-center">
@@ -91,7 +15,7 @@
             <th>Quantity</th>
             <th>Price</th>
             <th>Discount%</th>
-            <th>Total</th>
+            <th class="hide">Total</th>
             <th>Action</th>
             
         </tr>
@@ -101,48 +25,34 @@
         {
             sl = sl + 1;
 
-            if (item.RT == 1)
-            {
-        <tr style="background-color: #bfbaba;">
+
+        <tr>
             <td class="text-center">@sl</td>
             <td class="text-center">@item.FinishGoodProductName</td>
             <td class="text-center">@item.MeasurementSize</td>
-            @*<td class="text-center">@item.Quanity</td>*@
-            <td class="text-center" style="width:15%">
-                <input type="number" class="Quantity form-control form-control-sm " value="@item.BoxQuanity" />
 
+            <td class="text-center" style="width:15%">
+                <input type="number" class="boxQuantity form-control form-control-sm " value="@item.BoxQuanity" />
+                <span class="error hide">Quantity must be less then or equal current Stock</span>
             </td>
             <td class="text-center text-bold">@item.Price</td>
             @*<td class="text-center">@item.Discount</td>*@
             <td class="text-center" style="width:15%">
-                <input type="number" class="Discount form-control form-control-sm " value="@item.Discount" />
+                <input type="number" class="discountTotal form-control form-control-sm " value="@item.Discount" />
 
             </td>
-            <td class="text-center">@item.ProductTotal</td>
-            <td class="text-center">
-                <a href="#" class="btn btn-sm btn-outline-danger data-item-delete-ProductionSalesInfoId" title="Delete" data-item-delete-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
-                    <i class="fas fa-trash"></i>
-                </a>
-            </td>
-
+            <td class="hide">@item.ProductTotal</td>
+            <td class="text-center "><input type="checkbox"></td>
+            <td class="hide">@item.MQTY</td>
+            <td class="hide">@item.CurrentStock</td>
+            <td class="hide">@item.ProductSalesDetailsId</td>
+            <td class="hide">@item.TotalQty</td>
+            
 
         </tr>
 
-            }
-            else
-            {
-                <tr>
-                    <td class="text-center">@sl</td>
-                    <td class="text-center">@item.FinishGoodProductName</td>
-                    <td class="text-center">@item.MeasurementSize</td>
-                    <td class="text-center">@item.Quanity</td>
-                    <td class="text-center text-bold">@item.Price</td>
-                    <td class="text-center">@item.Discount</td>
-                    <td class="text-center">@item.ProductTotal</td>
-                   
-                </tr>
 
-            }
+
 
         }
     </tbody>
@@ -150,24 +60,45 @@
 
 
 
-@section scripts{
+
     
 <script type="text/javascript">
 
-    var ddlStockiestName = $("#ddlStockiestName");
+    var boxQuantity = $(".boxQuantity");
+    var discountTotal = $(".discountTotal");
+    var currentBoxQty = $(".currentBoxQty");
 
-    $(document).ready(function () {
+
+    boxQuantity.on('change', function () {
+       
+        debugger;
+        var currentBoxQty = $(this).val();
+         
+        var currentMQty = $(this).parent().parent().find("td:eq(8)").text();
+
+        var mstockqty = $(this).parent().parent().find("td:eq(9)").text();
+
+        var TotalQty = currentBoxQty * currentMQty;
+        console.log(TotalQty);
+
+        if (Number(TotalQty) <= Number(mstockqty)) {
+
+
+            $(this).parent().children("span").addClass("hide");
+        }
+        else {
+
+            $(this).parent().children("span").removeClass("hide");
+        }
+
+    });
+
 
         
-        $('.select2').select2();
-
         
-        $('.select2bs4').select2({
-            theme: 'bootstrap4'
-        });
 
-    })
+
 
     </script>
     
-    }
+
