--- a/ERPWeb/Views/ControlPanel/ApplicationConfig.cshtml
+++ b/ERPWeb/Views/ControlPanel/ApplicationConfig.cshtml
@@ -12,13 +12,13 @@
             <div class="card-header p-0 pt-1 border-bottom-0">
                 <ul class="nav nav-tabs" id="custom-tabs-two-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-one-module-tab" data-toggle="pill" href="#custom-tabs-one-module" role="tab" aria-controls="custom-tabs-one-module" aria-selected="true">Modules</a>
+                        <a class="nav-link active" id="custom-tabs-one-module-tab" data-toggle="pill" href="#custom-tabs-one-module" role="tab" aria-controls="custom-tabs-one-module" aria-selected="true">List Of Module</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-two-mainmenu-tab" data-toggle="pill" href="#custom-tabs-two-mainmenu" role="tab" aria-controls="custom-tabs-two-mainmenu" aria-selected="true">Main Menus</a>
+                        <a class="nav-link" id="custom-tabs-two-mainmenu-tab" data-toggle="pill" href="#custom-tabs-two-mainmenu" role="tab" aria-controls="custom-tabs-two-mainmenu" aria-selected="true">List Of Main Menu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-three-submenu-tab" data-toggle="pill" href="#custom-tabs-three-submenu" role="tab" aria-controls="custom-tabs-three-submenu" aria-selected="false">Submenus</a>
+                        <a class="nav-link" id="custom-tabs-three-submenu-tab" data-toggle="pill" href="#custom-tabs-three-submenu" role="tab" aria-controls="custom-tabs-three-submenu" aria-selected="false">List Of Submenu</a>
                     </li>
                 </ul>
             </div>
@@ -81,7 +81,7 @@
                                             </div>
                                             <div class="col-md-6">
                                                 <h5 class="text-center text-bold">
-                                                    List Of Mainmenu
+                                                    List Of Main Menu
                                                 </h5>
                                             </div>
                                             <div class="col-md-3">
