--- a/ERPWeb/Views/ControlPanel/_GetBranch.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetBranch.cshtml
@@ -16,9 +16,9 @@
                     <th class="hide"></th>
                     <th>Organization</th>
                     <th>Address</th>
-                    <th>MobileNo</th>
+                    <th>Mobile No.</th>
                     <th>Email</th>
-                    <th>PhoneNo</th>
+                    <th>Phone No.</th>
                     <th>Fax</th>
                     <th>Status</th>
                     <th>Remarks</th>
