--- a/ERPWeb/Views/ControlPanel/_GetRole.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetRole.cshtml
@@ -9,7 +9,7 @@
                 <tr class="text-center">
                     <th>#SL</th>
                     <th class="hide"></th>
-                    <th>RoleName</th>
+                    <th>Role Name</th>
                     <th class="hide"></th>
                     <th>Organization Name</th>
                     <th>Entry User</th>
@@ -24,9 +24,9 @@
                     <tr>
                         <td class="text-center text-bold">@sl</td>
                         <td class="hide">@role.RoleId</td>
-                        <td>@role.RoleName</td>
+                        <td class="text-center text-sm">@role.RoleName</td>
                         <td class="hide">@role.OrganizationId</td>
-                        <td>@role.OrganizationName</td>
+                        <td class="text-center text-sm">@role.OrganizationName</td>
                         <td class="text-center text-sm">@role.EntryUser</td>
                         <td class="text-center text-sm">@role.UpdateUser</td>
                         <td class="text-center">
