--- a/ERPWeb/Views/ControlPanel/_GetSubmenu.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetSubmenu.cshtml
@@ -12,14 +12,14 @@
                 <tr class="text-center">
                     <th>#SL</th>
                     <th class="hide"></th>
-                    <th>SubMenu Name</th>
+                    <th>Submenu Name</th>
                     <th class="hide">MMId</th>
                     <th>Main Menu</th>
                     <th>Controller Name</th>
                     <th style="width:10%">Action Name</th>
-                    <th>IconClass</th>
+                    <th>Icon Class</th>
                     <th>Is Viewable</th>
-                    <th>Is ActAsParent</th>
+                    <th>Is Act As Parent</th>
                     <th class="hide"></th>
                     <th>Parent Submenu</th>
                     <th>Entry User</th>
