--- a/ERPWeb/Views/Shared/_AdminDashboard.cshtml
+++ b/ERPWeb/Views/Shared/_AdminDashboard.cshtml
@@ -172,7 +172,7 @@
 
                         <div class="input-group">
                             @*<button type="button" class="form-control form-control-sidebar btn btn-light">DashBoard</button>*@
-                            <a href="/User/Index" style="background-image: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%)" class="form-control form-control-sidebar btn text-bold btn-light" id="btnAddNew">DashBoard</a>
+                            <a href="/User/Index" style="background-image: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(253,187,45,1) 100%)" class="form-control form-control-sidebar btn text-bold btn-light" id="btnAddNew">Dashboard</a>
                         </div>
                            
 
