--- a/ERPWeb/Views/User/Index.cshtml
+++ b/ERPWeb/Views/User/Index.cshtml
@@ -127,7 +127,7 @@
                 legend: {
                     labels: {
                         fontColor: "white",
-                        fontSize: 18
+                        fontSize: 14
                     }
                 },
                 //tooltips: { mode: 'index', intersect: false },
@@ -201,7 +201,7 @@
                 legend: {
                     labels: {
                         fontColor: "white",
-                        fontSize: 18
+                        fontSize: 14
                     }
                 },
                 //tooltips: { mode: 'index', intersect: false },
@@ -350,7 +350,7 @@
                 //labelFontColor: "red",
                 //color:'#3EB9DC',
                 datasets: [{
-                    label: 'PRoduct Stock',
+                    label: 'Product Stock',
 
                     //backgroundColor: '#3EB9DC',
                     backgroundColor: [
