--- a/ERPWeb/Views/ControlPanel/AppUserConfiguration.cshtml
+++ b/ERPWeb/Views/ControlPanel/AppUserConfiguration.cshtml
@@ -9,13 +9,13 @@
             <div class="card-header p-0 pt-1 border-bottom-0">
                 <ul class="nav nav-tabs" id="custom-tabs-two-tab" role="tablist">
                     <li class="nav-item">
-                        <a class="nav-link active" id="custom-tabs-one-branch-tab" data-toggle="pill" href="#custom-tabs-one-branch" role="tab" aria-controls="custom-tabs-one-branch" aria-selected="true">Branch Informations</a>
+                        <a class="nav-link active" id="custom-tabs-one-branch-tab" data-toggle="pill" href="#custom-tabs-one-branch" role="tab" aria-controls="custom-tabs-one-branch" aria-selected="true">Branch Information</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-two-role-tab" data-toggle="pill" href="#custom-tabs-two-role" role="tab" aria-controls="custom-tabs-two-role" aria-selected="false">Role Informations</a>
+                        <a class="nav-link" id="custom-tabs-two-role-tab" data-toggle="pill" href="#custom-tabs-two-role" role="tab" aria-controls="custom-tabs-two-role" aria-selected="false">Role Information</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" id="custom-tabs-three-user-tab" data-toggle="pill" href="#custom-tabs-three-user" role="tab" aria-controls="custom-tabs-three-user" aria-selected="true">User Informations</a>
+                        <a class="nav-link" id="custom-tabs-three-user-tab" data-toggle="pill" href="#custom-tabs-three-user" role="tab" aria-controls="custom-tabs-three-user" aria-selected="true">User Information</a>
                     </li>
                 </ul>
             </div>
