--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -368,7 +368,7 @@
 
         //date
         var date = new Date();
-        var today = new Date(date.getFullYear(), date.getMonth(), date.getDate());
+        var today = new Date(date.getFullYear(), date.getDate(), date.getMonth());
 
         var optSimple = {
             format: 'mm-dd-yyyy',
