--- a/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/ProductionPriceCreate.cshtml
@@ -57,7 +57,7 @@
                             </div>
                             <div class="col-md-3">
                                 @*<button class="btn btn-success btn-sm btn float-right" id="saveButton">SAVE <i class="fas fa-paper-plane"></i></button>*@
-                                <button class="btn-sm btn float-right button-33" role="button" >Save <i class="fas fa-paper-plane"></i></button>
+                                <button class="btn-sm btn float-right button-33" id="saveButton" role="button" >Save <i class="fas fa-paper-plane"></i></button>
                             </div>
                         </div>
 
