--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductEdit.cshtml
@@ -16,7 +16,7 @@
             <th>Price</th>
             <th>Discount%</th>
             <th class="hide">Total</th>
-            <th>Action</th>
+            <th>Remove(yes/no)</th>
             
         </tr>
     </thead>
@@ -42,7 +42,7 @@
 
             </td>
             <td class="hide">@item.ProductTotal</td>
-            <td class="text-center "><input type="checkbox"></td>
+            <td class="text-center"><input type="checkbox"></td>
             <td class="hide">@item.MQTY</td>
             <td class="hide">@item.CurrentStock</td>
             <td class="hide">@item.ProductSalesDetailsId</td>
