--- a/ERPWeb/Views/AgroConfiguration/_GetDueInvoicePartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetDueInvoicePartialView.cshtml
@@ -32,7 +32,7 @@
                             <td class="hide">@item.ProductSalesInfoId</td>
                             <td class="text-center">@item.InvoiceNo</td>
 
-                            <td class="text-center">@item.InvoiceDate</td>
+                            <td class="text-center">@item.InvoiceDate.Value.ToString("dd-MMM-yyyy")</td>
                             <td class="text-center">@item.TotalAmount</td>
                             <td class="text-center">@item.PaidAmount</td>
                             <td class="text-center">@item.DueAmount</td>
@@ -64,7 +64,7 @@
                             <td class="hide">@item.ProductSalesInfoId</td>
                             <td class="text-center">@item.InvoiceNo</td>
 
-                            <td class="text-center">@item.InvoiceDate</td>
+                            <td class="text-center">@item.InvoiceDate.Value.ToString("dd-MMM-yyyy")</td>
                             <td class="text-center">@item.TotalAmount</td>
                             <td class="text-center">@item.PaidAmount</td>
                             <td class="text-center">@item.DueAmount</td>
