--- a/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetAgroSalesProductList.cshtml
@@ -103,10 +103,17 @@
 <div class="modal fade" id="AgroSalesProductEdit" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-xl" role="document">
         <div class="modal-content">
+
+            
             <div class="modal-header bg-gradient-gray-dark">
-                
-               
+
+
                 <div class="col-md-12">
+                    <div class="row">
+                        <h3 class="text-center">Sales Edit</h3>
+                        <button type="button" class="close text-white" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
+
+                    </div>
                     <div class="row">
                         <input type="hidden" id="hdSalesId" />
                         <div class="col-md-3">
@@ -147,8 +154,8 @@
                 </div>
 
 
-                @*<h4 id="modalHeading" class="modal-title">Agro Sales Product Edit</h4>
-                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>*@
+               
+        
 
             </div>
 
@@ -157,7 +164,7 @@
 
 
             </div>
-            <div class="modal-footer btn-default">
+            <div class="modal-footer  btn bg-gradient-gray-dark">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
                         Data has been saved Successful!
