--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -220,7 +220,7 @@
                                                                 <input type="number" id="ddluprice" name="uprice" class="form-control form-control-sm" />
                                                                 <span class="error hide req-uprice">Unit Price Is Required</span>
                                                             </div>
-                                                            <div class="col-md-1">
+                                                            <div class="col-md-2">
                                                                 <label for="ddlqty"> Qty</label>
                                                                 <input type="number" id="ddlqty" name="qty" class="form-control form-control-sm" />
                                                                 <span class="error hide req-qty">Qty Is Required</span>
@@ -230,7 +230,7 @@
                                                                 <input type="number" id="ddlttprice" name="ddlttprice" class="form-control form-control-sm" readonly />
                                                             </div>
 
-                                                            <div class="col-md-2">
+                                                            <div class="col-md-1">
                                                                 <div class="form-group">
                                                                     <label for="ddlexpdate">Expire Date</label>
                                                                     <div class="input-group-sm date" id="datePicker">
@@ -244,7 +244,7 @@
                                                             </div>
 
 
-                                                            <div class="col-md-1">
+                                                            <div class="col-md-1" style="margin-left:-20px">
                                                                 <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
                                                                 <div class="clearfix">
                                                                     <button type="submit" class="btn btn-sm float-right btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
@@ -422,7 +422,7 @@
         var today = new Date(date.getFullYear(), date.getMonth(), date.getDate());
 
         var optSimple = {
-            format: 'mm-dd-yyyy',
+            format: 'mm/dd/yyyy',
             todayHighlight: true,
             orientation: 'bottom right',
             autoclose: true,
@@ -430,7 +430,7 @@
         };
 
         var optComponent = {
-            format: 'mm-dd-yyyy',
+            format: 'mm/dd/yyyy',
             container: '#datePicker',
             orientation: 'auto top',
             todayHighlight: true,
